flux/mailu/routing/http-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailu-ingress
  namespace: mailu
  labels:
    app.kubernetes.io/component: front
    app.kubernetes.io/instance: mailu
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mail
  annotations:
    ksbh.rs/modules: "https"
    ksbh.rs/protocol: "https"
spec:
  ingressClassName: ksbh
  tls:
    - secretName: yannis-codes
      hosts:
        - mail.yannis.codes
  rules:
    - host: mail.yannis.codes
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: mailu-mailu-front
                port:
                  number: 443
